Added Type Definition for requireJS under ts and finished build process

--- a/dev/index.htm
+++ b/dev/index.htm
@@ -13,7 +13,7 @@
     <script src="vendor/requirejs/require.js" charset="utf-8"></script>
     <script type="text/javascript">
       require(['js/require.config'], function(){
-        require(['../app']);
+        require(['../AppBootstrap']);
       });
     </script>
     <!-- endbuild -->
